--- a/task1.html
+++ b/task1.html
@@ -4,8 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <style>
+        table,tr,td,th{
+            border: 1px solid rgb(255, 255, 255);
+            border-collapse: collapse;
+        }
+        table{
+            width:1000px;
+            height: 150px;
+            background-color: rgb(122, 204, 204);
+            text-align: center;
+            margin:auto;
+            
+        }
+        h1{
+            text-align: center;
+
+        }
+    </style>
 </head>
 <body>
-    <h1>This is task 1</h1>
+    <h1>Task 1</h1>
+
+    <table>
+        <tr>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Age</th>
+        </tr>
+        <tr>
+            <td>Jill</td>
+            <td>Smith</td>
+            <td>50</td>
+        </tr>
+        <tr>
+            <td>Eve</td>
+            <td>Jackson</td>
+            <td>94</td>
+        </tr>
+        <tr>
+            <td>John</td>
+            <td>Doe</td>
+            <td>80</td>
+        </tr>
+    </table>
+
 </body>
 </html>
