--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
 
     <style>
         body{
-            background-image: url();
+            background-image: url(Images/Background.webp) ;
+            background-size:cover;
+            background-repeat: no-repeat;
+
+            
+            padding: 0;
+            margin: 0;
+            
         }
         table,tr,th,td{
             border: 1px solid black;
@@ -29,7 +36,7 @@
         }
         h1{
             text-align: center;
-            background-color: antiquewhite;
+            background-color: rgb(236, 192, 147);
         }
     </style>
 </head>
@@ -51,6 +58,10 @@
         <tr>
             <td>Task 3</td>
             <td><a href="task3.html">task 3</a></td>
+        </tr>
+        <tr>
+            <td>Task 4</td>
+            <td><a href="task4.html">task 3</a></td>
         </tr>
     </table>
 
