--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
             <td>Task 4</td>
             <td><a href="task4.html">task 4</a></td>
         </tr>
+        <tr>
+            <td>Task5</td>
+            <td><a href="task5.html">task 5</a></td>
+        </tr>
     </table>
 
     <h1>CSS Tasks</h1>
@@ -73,16 +77,45 @@
         </tr>
         <tr>
             <td>Task 1</td>
-            <td><a href="task1.html">task 1</a></td>
+            <td><a href="csstask1.html">task 1</a></td>
         </tr>
         <tr>
             <td>Task 2</td>
-            <td><a href="task2.html">task 2</a></td>
+            <td><a href="csstask2.html">task 2</a></td>
         </tr>
         <tr>
             <td>Task 3</td>
-            <td><a href="task3.html">task 3</a></td>
+            <td><a href="csstask3.html">task 3</a></td>
         </tr>
+        <tr>
+            <td>Task 4</td>
+            <td><a href="csstask4.html">task 4</a></td>
+        </tr>
+        <tr>
+            <td>Task 5</td>
+            <td><a href="csstask5.html">task 5</a></td>
+        </tr>
+        <tr>
+            <td>Task 6</td>
+            <td><a href="csstask6.html">task 6</a></td>
+        </tr>
+        <tr>
+            <td>Task 7</td>
+            <td><a href="csstask7.html">task 7</a></td>
+        </tr>
+    </table>
+
+    <h1>Bootstrap Tasks</h1>
+    <table>
+        <tr>
+            <th>Task Name</th>
+            <th>Task Link</th>
+        </tr>
+        <tr>
+            <td>Task 1</td>
+            <td><a href="travels/index.html">task 1</a></td>
+        </tr>
+        
     </table>
 </body>
 </html>
